--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier . --write",
+    "lint": "eslint ./src/*.js --fix",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -34,6 +37,17 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.3",
+    "prettier": "^2.4.1"
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run format"
     ]
   }
 }
